@@ -30,6 +30,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7995: When calling accept() on a socket with a timeout, the returned
+  socket is now always non-blocking, regardless of the operating system.
+
 - Issue #10756: atexit normalizes the exception before displaying it. Patch by
   Andreas Stührk.
 
